# snes-java-script

./: README.md  architecture.md  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  snes9x_jni.cpp  types.h
app/src/main/cpp/apu/bapu/dsp/: SPC_DSP.cpp  SPC_DSP.h
app/src/main/cpp/apu/bapu/smp/core/: oppseudo_misc.cpp
app/src/main/java/com/example/snesemulator/: EmulatorActivity.kt  EmulatorJNI.kt  GameAdapter.kt  GameListActivity.kt  MainActivity.kt  RomManager.kt  VirtualControls.kt
app/src/main/res/layout/: activity_emulator.xml  activity_game_list.xml  activity_main.xml  item_game.xml
app/src/main/res/values/: strings.xml  styles.xml
